Set up trinidad with a deploy script Add missing default user avatar Set prod database to point to CRM on dev sqlserver for now